{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 44,
  "lineage": "351066d8-0f1a-1489-49e5-43db713296f9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:vpc/vpc-051f7d14b08b60cd9",
            "cidr_block": "10.20.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00e566367bb5dabdb",
                "cidr_block": "10.20.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0e2f66217ab8d5ccf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "kmh-vpc"
                ]
              }
            ],
            "id": "vpc-051f7d14b08b60cd9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00483209d6f33eb8a",
            "owner_id": "708113109960",
            "tags": {
              "Name": "kmh-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa6384ae0f19f238",
            "arn": "arn:aws:ec2:us-east-1:708113109960:instance/i-0c64d68d0252f7a8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c64d68d0252f7a8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "kmh-vm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07b8c91a610de14c0",
            "private_dns": "ip-10-20-0-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.0.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aefc8db51f489255",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1407df0b2848c41",
            "tags": {
              "Name": "kmh-frontend"
            },
            "tags_all": {
              "Name": "kmh-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9cb35ee72b68475"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_vpc.this",
            "tls_private_key.pk"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa6384ae0f19f238",
            "arn": "arn:aws:ec2:us-east-1:708113109960:instance/i-020c2cfef5f3405d0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-020c2cfef5f3405d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "kmh-vm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe705d80fe4cbd1a",
            "private_dns": "ip-10-20-128-171.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.128.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efee3be562ec032c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b16852d02d29777b",
            "tags": {
              "Name": "kmh-streamer"
            },
            "tags_all": {
              "Name": "kmh-streamer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9cb35ee72b68475"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_subnet.private",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_vpc.this",
            "tls_private_key.pk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kmh_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:internet-gateway/igw-08492f4bba5ad8fb6",
            "id": "igw-08492f4bba5ad8fb6",
            "owner_id": "708113109960",
            "tags": {
              "Name": "kmh-internet-gw"
            },
            "tags_all": {
              "Name": "kmh-internet-gw"
            },
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:route-table/rtb-001d751d6d09aae62",
            "id": "rtb-001d751d6d09aae62",
            "owner_id": "708113109960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08492f4bba5ad8fb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kmh-route-table"
            },
            "tags_all": {
              "Name": "kmh-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kmh_gw",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0075557f8cc712762",
            "route_table_id": "rtb-001d751d6d09aae62",
            "subnet_id": "subnet-0b16852d02d29777b"
          },
          "dependencies": [
            "aws_internet_gateway.kmh_gw",
            "aws_route_table.route_table",
            "aws_subnet.private",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3fc79bad2bd1a9e",
            "route_table_id": "rtb-001d751d6d09aae62",
            "subnet_id": "subnet-0c1407df0b2848c41"
          },
          "dependencies": [
            "aws_internet_gateway.kmh_gw",
            "aws_route_table.route_table",
            "aws_subnet.public",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-029f8836aae70a74e",
            "description": "Allow SSH and HTTPS inbound  and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "0",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f8836aae70a74e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kmh-frontend-sg",
            "name_prefix": "",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_frontend"
            },
            "tags_all": {
              "Name": "sg_frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "streamer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:security-group/sg-0e03909790b033707",
            "description": "Allow RTMP inbound  and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.128.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "0",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e03909790b033707",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.128.0/24"
                ],
                "description": "",
                "from_port": 1935,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1935
              }
            ],
            "name": "kmh-streamer-sg",
            "name_prefix": "",
            "owner_id": "708113109960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_streamer"
            },
            "tags_all": {
              "Name": "sg_streamer"
            },
            "timeouts": null,
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-0b16852d02d29777b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b16852d02d29777b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kmh-private-subnet"
            },
            "tags_all": {
              "Name": "kmh-private-subnet"
            },
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:708113109960:subnet/subnet-0c1407df0b2848c41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1407df0b2848c41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "708113109960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kmh-public-subnet"
            },
            "tags_all": {
              "Name": "kmh-public-subnet"
            },
            "vpc_id": "vpc-051f7d14b08b60cd9"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}